# resource_mpc

./: .gitmodules  CMakeLists.txt  package.xml
include/resource_mpc/: plant_model.hpp
msg/: rmpc_control.msg  rmpc_state.msg
src/: controller_node.cpp  flip_freq.c  plant_node.cpp  udp_rcv.c
