<?xml version="1.0"?>
<package format="2">
  <name>resource_mpc</name>
  <version>0.0.0</version>
  <description>The resource_mpc package</description>

  <maintainer email="petr.listov@epfl.ch">plistov</maintainer>

  <license>MIT</license>

  <author email="petr.listov@epfl.ch">Petr Listov</author> 
  <author email="colin.jones@epfl.ch">Colin Jones</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
